# applied-llm-engineering

./: .gitignore  LICENSE  README.md  requirements.txt
homework-challenges/local-llms/: ollama-webpage-summarizer.ipynb
homework-challenges/rag-evaluation-dashboard/: README.md  evaluator.py
lectures/: company-brochure-generator.ipynb  tokenizing-and-memory.ipynb
lectures/utilities/: scraper.py
lectures/week-five/: 1-expert-knowledge-worker-rag.ipynb  3-rag-question-answering-app.ipynb  4-rag-evaluation.ipynb  5-advanced-rag-techniques.ipynb  app.py  evaluator.py  expert-knowledge-worker-rag.ipynb  rag-question-answering-app.ipynb  rag-vector-store-visualization.ipynb
lectures/week-four/: 2-open-source-code-generator.ipynb  3-rust-code-generator.ipynb  code-generator.ipynb  open-source-code-generator.ipynb  rust-code-generator.ipynb
lectures/week-one/: company-brochure-generator.ipynb
lectures/week-seven/: 2-prompt-data-and-base-model.ipynb
lectures/week-six/: 1-data-curation.ipynb  2-data-preprocessing.ipynb  3-baselines-traditional-ml.ipynb
lectures/week-six/pricer/: batch.py  (+4 more)
lectures/week-three/: 1-visualize-token-by-token.ipynb  meeting-minutes-creator.ipynb
lectures/week-two/: 2-gradio-llm-interfaces.ipynb  3-conversational-ai-chatbot.ipynb  airline-tool-calling-assistant.ipynb  conversational-ai-chatbot.ipynb  frontier-model-apis.ipynb  gradio-llm-interfaces.ipynb  multimodal-airline-assistant.ipynb
projects/llama-weather-oracle/: README.md  pyproject.toml
projects/llama-weather-oracle/src/llama_weather_oracle/: __init__.py  weather_oracle.py
(+7 files in other folders)
